--- a/style.css
+++ b/style.css
@@ -180,6 +180,7 @@ body {
 }
 
 .button_call {
+    position: relative;
     display: flex;
     border-radius: 13.4px;
     font-weight: 600;
@@ -1046,7 +1047,7 @@ body {
 
 .catalog_promotion {
     display: flex;
-    flex-wrap: wrap;
+
     justify-content: space-between;
     padding-top: 75.8px;
 }
@@ -1063,7 +1064,6 @@ body {
     line-height: 62.67px;
     letter-spacing: -1px;
     color: #000000;
-    padding-right: 286.96px;
 }
 
 .promotion-desc {
@@ -1080,19 +1080,9 @@ body {
     border: 2px solid #C5C5C5;
     border-radius: 18.12px;
     padding: 49.33px 35.23px 46.57px 34.23px;
-    width: 647.32px;
-    height: auto;
+    width: 716.79px;
+    height: 384px;
     display: flex;
-    gap: 31.07px;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: center;
-    font-weight: 500;
-    font-size: 20.13px;
-    line-height: 48px;
-    color: #000000;
-    text-decoration: underline;
-    text-decoration-thickness: 1px;
 }
 
 .action-item:hover {
@@ -2250,3 +2240,365 @@ body {
     padding-top: 41px;
 }
 
+.description_definition {
+    padding-top: 42px;
+}
+
+.description_definition-title {
+    font-weight: 700;
+}
+
+.description_definition-text {
+    padding-top: 41px;
+}
+
+.faq {
+    padding-top: 75.26px;
+}
+
+.faq-title {
+    font-weight: 700;
+    font-size: 52.35px;
+    line-height: 62.67px;
+    letter-spacing: -1px;
+}
+
+.faq-dropdown {
+    padding-top: 50.76px;
+    display: flex;
+    flex-direction: column;
+    gap: 13.08px;
+}
+
+
+.faq-dropdown__tab {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+
+.faq-text {
+    padding-top: 30.21px;
+    width: 979.54px;
+    font-weight: 500;
+    font-size: 20.13px;
+    line-height: 30.2px;
+}
+
+.contacts {
+    padding-top: 74.72px;
+    border-bottom: 1px solid #000000;
+    padding-bottom: 43.61px;
+}
+
+.contacts-title {
+    font-weight: 700;
+    font-size: 52.35px;
+    line-height: 62.67px;
+    letter-spacing: -1px;
+}
+
+.contacts_top {
+    display: flex;
+    padding-top: 45.72px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.contacts_number {
+    padding-top: 8px;
+    display: flex;
+    flex-direction: column;
+}
+
+.contacts_number-link {
+    font-weight: 700;
+    font-size: 44.61px;
+    line-height: 53.41px;
+    letter-spacing: -1px;
+    color: #000000;
+}
+
+.contacts_number-hours {
+    padding-top: 15.49px;
+    padding-bottom: 14.4px;
+    font-weight: 400;
+    font-size: 25.74px;
+    line-height: 48.06px;
+    letter-spacing: -1px;
+}
+
+.button-contacts {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 237.09px;
+    height: 53.39px;
+    font-weight: 600;
+    font-size: 20.51px;
+    line-height: 16.04px;
+    letter-spacing: -1px;
+    color: #000000;
+    background-color: #ffffff;
+    border: 1px solid #000000;
+    border-radius: 11.34px;
+}
+
+.contacts_address {
+    width: 312.08px;
+    padding-top: 55.33px;
+}
+
+.contacts_address-title {
+    font-weight: 700;
+    font-size: 24.83px;
+    line-height: 46.38px;
+    letter-spacing: -1px;
+}
+
+.contacts_address-address {
+    padding-top: 10px;
+    font-weight: 400;
+    font-size: 24.83px;
+    line-height: 41.39px;
+    letter-spacing: -1px;
+}
+
+.contacts_email {
+    padding-top: 25.63px;
+}
+
+.contacts_email-title {
+    font-weight: 700;
+    font-size: 24.83px;
+    line-height: 46.38px;
+    letter-spacing: -1px;
+}
+
+.contacts_email-email {
+    padding-top: 10px;
+    font-weight: 400;
+    font-size: 24.83px;
+    line-height: 41.39px;
+    letter-spacing: -1px;
+}
+
+.contacts_map-links {
+    padding-top: 25.18px;
+    display: flex;
+    gap: 26.18px;
+}
+
+.contacts_map-links a {
+    font-weight: 400;
+    font-size: 30.2px;
+    line-height: 41.39px;
+    letter-spacing: -1px;
+    color: #000000;
+}
+
+.contacts_bottom {
+    display: flex;
+    gap: 68.59px;
+    padding-top: 76.69px;
+}
+
+.contacts_requisites-title {
+    font-weight: 700;
+    font-size: 52.35px;
+    line-height: 62.67px;
+    letter-spacing: -1px;
+}
+
+.contacts_requisites-list {
+    padding-top: 30.62px;
+    width: 622.02px;
+    height: 309.76px;
+    display: flex;
+    flex-direction: column;
+    gap: 9.06px;
+}
+
+.contacts_requisites-item {
+    display: flex;
+    gap: 9.93px;
+    font-weight: 400;
+    font-size: 24.83px;
+    line-height: 41.39px;
+    letter-spacing: -1px;
+}
+
+.contacts_vacancies-title {
+    font-weight: 700;
+    font-size: 52.35px;
+    line-height: 62.67px;
+    letter-spacing: -1px;
+}
+
+.contacts_vacancies-list {
+    padding-top: 25.59px;
+    display: flex;
+    flex-direction: column;
+    gap: 26.18px;
+}
+
+.contacts_vacancies-link {
+    font-weight: 400;
+    font-size: 30.2px;
+    line-height: 41.39px;
+    letter-spacing: -1px;
+    text-decoration: underline;
+    text-decoration-thickness: 0.5px;
+    color: #000000;
+}
+
+.contacts_vacancies-button {
+    padding-top: 35.93px;
+}
+
+.button_atf {
+    width: 365.04px;
+    height: 57.67px;
+    border-radius: 12.19px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    font-size: 22.05px;
+    line-height: 17.24px;
+    letter-spacing: -1px;
+}
+
+.footer_block {
+    padding-top: 41.25px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer_block-left {
+    position: relative;
+    width: 211.41px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.footer_block-left img {
+    width: 60.4px;
+    height: 60.4px;
+}
+
+.footer-name {
+    width: 135.91px;
+    padding-left: 15.1px;
+    font-weight: 700;
+    font-size: 28.19px;
+    line-height: 28.19px;
+    letter-spacing: -1px;
+}
+
+.footer-data {
+    padding-top: 18.12px;
+    font-weight: 400;
+    font-size: 20.13px;
+    line-height: 32.22px;
+    letter-spacing: -1px;
+}
+
+.footer_right {
+    width: 714.77px;
+    font-weight: 400;
+    font-size: 20.13px;
+    line-height: 32.22px;
+    letter-spacing: -1px;
+}
+
+.button_action {
+    background-color: #ffffff;
+    font-weight: 500;
+    font-size: 20.13px;
+    line-height: 47.84px;
+}
+
+.promotion_action-area {
+    display: flex;
+
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 31.07px;
+}
+
+.promo_action-row {
+    display: flex;
+    gap: 31.07px;
+}
+
+.input_quiz-active svg {
+    fill: #00CA81;
+}
+
+.call_form {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 2;
+    position: absolute;
+    top: 55px;
+    right: 240px;
+    background-color: #ffffff;
+    width: 694.91px;
+    height: 252px;
+    border-radius: 11.38px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.call_form-title {
+    font-weight: 700;
+    font-size: 29.88px;
+    line-height: 46.82px;
+    letter-spacing: -1px;
+}
+
+.call_form-actions {
+    padding-top: 34.81px;
+    display: flex;
+    gap: 10.83px;
+}
+
+.call_form-actions input {
+    font-weight: 600;
+    font-size: 16.78px;
+    line-height: 42.06px;
+    color: #353535;
+    width: 263.7px;
+    height: 44.82px;
+    border-radius: 38.1px;
+    background-color: #F3F3F3;
+    border: none;
+    padding-left: 20px;
+}
+
+.button_phone {
+    width: 172.67px;
+    height: 45.1px;
+    border-radius: 38.1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    font-size: 14.94px;
+    line-height: 42.06px;
+}
+
+.call_text {
+    padding-top: 18.68px;
+    font-weight: 500;
+    font-size: 15.74px;
+    line-height: 22.04px;
+    color: #8B8B8B;
+}
+
+.call_form-active {
+    display: flex;
+}
