--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,6 @@ table {
 }
 
 body {
-    overflow-x: hidden;
     font-family: "Vela Sans", sans-serif;
 }
 
@@ -70,6 +69,12 @@ hr {
 
 .button_green {
     background-color: #00CA81;
+    transition: background-color 0.3s;
+}
+
+.button_green:hover {
+    transition: background-color 0.3s;
+    background-color: #02b373;
 }
 
 .button_gray {
@@ -286,10 +291,27 @@ hr {
     letter-spacing: -1px;
 }
 
-.search {
+.search-icon {
     display: flex;
+    gap: 3px;
     flex-direction: column;
     align-items: center;
+}
+
+.search {
+    transition: 0.3s;
+}
+
+.search.search-active {
+    width: 350px;
+    background-color: #F6F6F6;
+    overflow: visible;
+}
+
+.search svg {
+    background-color: #F6F6F6;
+    padding: 9px;
+    border-radius: 10.8px;
 }
 
 .search:hover {
@@ -513,10 +535,31 @@ hr {
     top: 235px;
 }
 
-.button_basket-small svg {
-    position: absolute;
-    left: 47px;
-    top: 260px;
+.cart_quantity {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: -20px;
+    margin-bottom: 25px;
+    min-width: 20.62px;
+    min-height: 20.62px;
+    border-radius: 50%;
+    background-color: #00CA81;
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 16.79px;
+    line-height: 19px;
+    letter-spacing: -1px;
+}
+
+.cart_list {
+    max-height: 367px;
+    overflow: auto;
+}
+
+.cart_list-item {
+    padding-bottom: 17px;
+    list-style: none;
 }
 
 .quiz {
@@ -729,7 +772,7 @@ hr {
     line-height: 18.6px;
     letter-spacing: -1px;
     border-radius: 38.26px;
-    background-image: url("img/prize_item_bg.png");
+    background-image: url("/img/prize_item_bg.png");
     background-repeat: no-repeat;
     background-position: center;
     display: flex;
@@ -993,7 +1036,7 @@ hr {
 }
 
 .button-addToCart {
-    z-index: 2;
+    z-index: 1;
     width: 52.35px;
     height: 52.35px;
     background-color: #ffffff;
@@ -2454,6 +2497,12 @@ hr {
     font-size: 22.05px;
     line-height: 17.24px;
     letter-spacing: -1px;
+
+}
+
+.button_atf a {
+    color: #ffffff;
+    text-decoration: none;
 }
 
 .footer_block {
@@ -2528,7 +2577,7 @@ hr {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    z-index: 2;
+    z-index: 3;
     position: absolute;
     top: 55px;
     right: 240px;
@@ -2586,7 +2635,7 @@ hr {
 }
 
 .catalog_area {
-    z-index: 2;
+    z-index: 3;
     position: absolute;
     left: -361.5px;
     top: 95px;
@@ -2655,12 +2704,20 @@ hr {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.4);
     display: none;
+}
+
+.cart_modal-overlay {
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .cart_modal-area {
     border-radius: 18px;
+    position: sticky;
     z-index: 3;
     max-width: 944px;
     margin: 132px auto 0;
@@ -2683,10 +2740,12 @@ hr {
 }
 
 .cart_modal-list {
-    display: flex;
-    flex-direction: column;
-    gap: 17px;
     padding-top: 52px;
+    gap: 17px;
+}
+
+.cart_list-list {
+    gap: 17px;
 }
 
 .cart_modal-text {
